# proteins

./: .gitignore  Cargo.toml  README.md  custom.json  flake.nix
data/: dictionary.json  translations.json
src/: helpers.rs  lib.rs  main.rs  templates.rs  update.rs
static/: styles.css
templates/: custom.html  error.stpl  header.html  index.html  index.stpl  more.html  paper.html  settings.stpl
