[package]
name = "proteins"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json", "gzip"] }
serde = "1.0.147"
serde_json = "1.0.87"
warp = "0.3.1"
sailfish = "0.4.0"
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
urlencoding = "2.1.2"
anyhow = "1.0.66"
rand = "0.8.5"
