[package]
name = "proteins"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.8"
rand = "0.8.5"
warp = "0.3.1"
serde = "1.0.147"
sailfish = "0.4.0"
serde_json = "1.0.87"
urlencoding = "2.1.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.12", features = ["blocking", "json", "gzip"] }
indexmap = { version = "2.0.2", features = ["serde"]}
regex = "1.10.2"
